[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/in_game.theme" type="Theme" id=1]
[ext_resource path="res://scripts/PauseOverlay.gd" type="Script" id=2]

[node name="PauseOverlay" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 475.0
margin_top = 175.0
margin_right = 890.0
margin_bottom = 593.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 412.0
margin_bottom = 415.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 394.0
margin_bottom = 382.0

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 379.0
margin_bottom = 68.0
focus_mode = 0
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 379.0
margin_bottom = 146.0
focus_mode = 0
text = "Restart"

[node name="MusicButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 379.0
margin_bottom = 224.0
focus_mode = 0
pressed = true
text = "Music"
align = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 379.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 40 )

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 379.0
margin_bottom = 352.0
focus_mode = 0
text = "Exit to Menu"
